making attendence buttons a part of standalone component;

--- a/FullStack/TeamManager/client/src/App.css
+++ b/FullStack/TeamManager/client/src/App.css
@@ -37,6 +37,21 @@
   }
 }
 
+/* Player statuses styles */
+
+.Undecided {
+    background-color: orange;
+}
+
+.NotPlaying {
+    background-color: red;
+}
+
+.Playing {
+    background-color: green;
+}
+/* Player statuses styles END */
+
 /* Spinner */
 
 .loader {
